--- a/front-end/order_status.html
+++ b/front-end/order_status.html
@@ -30,8 +30,8 @@
 	</ul>
 	
 	<label>Your order (Order Number) has been placed!</label>
-	<div class="container" style= "margin-bottom: 20%;">
-		<div class="progress vertical" style="height: 40px; float:left;">
+	<div class="container" style= "margin-bottom: 1%; width: 100%;">
+		<div class="progress vertical" style="height: 40px; width:60%; float:left; margin:2% 5%;">
 		  <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 10%;">
 		  </div>  
 		  <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
@@ -39,13 +39,41 @@
 		  <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 35%;">
 		  </div>
 		</div>
-		<div style= "margin-left:40%; margin-top:0;">
-		  	<label>Validating</label>
-		  	<label>Preparing your order</label>
-		  	<label>Order out for delivery</label>
-		</div>
+		  	<label style= "width:10%; font-size:130%; margin-right:0%;">Validating</label>
+		  	<label style= "width:20%; font-size:130%; margin-right:0%; margin-left:3%;">Preparing your order</label>
+		  	<label style= "width:20%; font-size:130%; margin-right:0%; margin-left:4%">Order out for delivery</label>
 	</div>
+	<label for="countdown" style= "width:100%; font-size:180%; margin-left:25%;">Your order will arrive in:</label>
+	<p id="countdown" class="timer"></p>
+
 </div>
+
+<script>
+// Set the date we're counting down to
+var placed_date = new Date();
+var delivery_date = new Date(placed_date.getTime() + 40*60000); //40 minutes delivery = 40x60000 ms
+var countDownDate = new Date(delivery_date).getTime();
+
+// Update the count down every 1 second
+var x = setInterval(function() {
+    // Get todays date and time
+    var now = new Date().getTime();
+    // Find the distance between now and the count down date
+    var distance = countDownDate - now;
+    
+    // Time calculations for minutes and seconds
+    var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+    var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+    
+    // Output the result in an element with id="countdown"
+    document.getElementById("countdown").innerHTML = minutes + "m " + seconds + "s ";
+    // If the count down is over, write some text 
+    if (distance < 0) {
+        clearInterval(x);
+        document.getElementById("countdown").innerHTML = "Enjoy Your Food!";
+    }
+}, 1000);
+</script>
 
 <div class="footer">
   <a class="footer_links" href="#About" style="float: left; margin-left: 2%;">About Us</a>
