Added links to other html pages for page forwarding

--- a/front-end/order_status.html
+++ b/front-end/order_status.html
@@ -24,7 +24,7 @@
 	<ul>
 	  <li><a href="#Menu">Food Menu <img align= "right" src="menu_icon.png" style="width: 35px; height: 35px"/></a></li>
 	  <li><a href="#Cart">Shopping Cart <img align= "right" src="cart_icon.png" style="width: 35px; height: 35px"/></a></li>
-	  <li><a href="#Profile">Profile <img align= "right" src="profile_icon.jpg" style="width: 35px; height: 35px"/></a></li>
+	  <li><a href="profile.html">Profile <img align= "right" src="profile_icon.jpg" style="width: 35px; height: 35px"/></a></li>
 	  <li><a href="#History">Order History <img align= "right" src="order_history_icon.png" style="width: 35px; height: 35px"/></a></li>
 	  <li><a href="#Logout">Logout <img align= "right" src="logout_icon.png" style="width: 35px; height: 35px"/></a></li>
 	</ul>
