--- a/front-end/payment.html
+++ b/front-end/payment.html
@@ -20,12 +20,12 @@
 	<ul>
 	  <li><a href="#Menu">Food Menu <img align= "right" src="menu_icon.png" style="width: 35px; height: 35px"/></a></li>
 	  <li><a href="#Cart">Shopping Cart <img align= "right" src="cart_icon.png" style="width: 35px; height: 35px"/></a></li>
-	  <li><a href="#Profile">Profile <img align= "right" src="profile_icon.jpg" style="width: 35px; height: 35px"/></a></li>
+	  <li><a href="profile.html">Profile <img align= "right" src="profile_icon.jpg" style="width: 35px; height: 35px"/></a></li>
 	  <li><a href="#History">Order History <img align= "right" src="order_history_icon.png" style="width: 35px; height: 35px"/></a></li>
 	  <li><a href="#Logout">Logout <img align= "right" src="logout_icon.png" style="width: 35px; height: 35px"/></a></li>
 	</ul>
 
-	<form name= "myForm" action="payment.html">
+	<form name= "myForm" action="order_status.html">
 		<label style= "padding-bottom:2%">Confirm / Update Delivery Address:</label>
 		<div style= "float:left; width:30%; margin-left:5%">
 		<label for= "address" style="font-size: 120%; margin-top: 3%; margin:0 0%">Street Address:</label>
